Fixed java 17 compatibility. Fixed windows charset.